--- a/themes/tuos/assets/css/style.css
+++ b/themes/tuos/assets/css/style.css
@@ -1,9 +1,14 @@
 html {
   font-size: 17px; }
 
+@font-face {
+ font-family: 'TUOS Blake';
+ src: url('BlakeBd.ttf');
+}
+
 .header_tuos {
   background-color: #009C88;
-  font-family: "TUOS Stephenson";
+  font-family: "TUOS Blake";
   font-size: 2.1rem;
   color: #ffffff;
   border-bottom: 0px solid #ffffff;
