change header text to dataviz.shef

--- a/themes/tuos/templates/base.tmpl
+++ b/themes/tuos/templates/base.tmpl
@@ -15,7 +15,7 @@
     <div class="headcontainer">
         <div class="logo"><a href="/"><img src="https://sheffield.ac.uk/branding/webapps/0.7.0/assets/logo.svg" alt="The University of Sheffield." class="respImg"></a></div>
         <div class="page-title alignleft">
-            <em>Data Visualisation Hub</em>
+            dataviz.shef
         </div>
     </div>
 </header>
