change trianglify color palette

--- a/themes/tuos/templates/base.tmpl
+++ b/themes/tuos/templates/base.tmpl
@@ -74,7 +74,7 @@
     var pattern = Trianglify({
         width: window.innerWidth,
         height: window.innerHeight,
-        x_colors: `BuPu`,
+        x_colors: ['#ffffff', '#f9fff2','#0066B3'],
         palette: Trianglify.colorbrewer
     });
     <!-- document.body.appendChild(pattern.canvas()) -->
