--- a/themes/tuos/templates/base.tmpl
+++ b/themes/tuos/templates/base.tmpl
@@ -14,13 +14,13 @@
 <!-- header -->
 <header class="header_tuos">
     <div class="headcontainer">
-        <div class="logo"><a href="/"><img src="https://sheffield.ac.uk/branding/webapps/0.7.0/assets/logo.svg" alt="The University of Sheffield." class="respImg"></a></div>
+        <div class="logo"><a href="https://dataviz.shef.ac.uk/"><img src="https://sheffield.ac.uk/branding/webapps/0.7.0/assets/logo.svg" alt="The University of Sheffield." class="respImg"></a></div>
         <div class="page-title alignleft">
             dataviz.shef
         </div>
     </div>
 </header>
-<!-- /.header --> 
+<!-- /.header -->
 
 <a href="#content" class="sr-only sr-only-focusable">{{ messages("Skip to main content") }}</a>
 
